--- a/homework_5/purchase.html
+++ b/homework_5/purchase.html
@@ -5,12 +5,9 @@
     <meta charset="utf-8">
     <title>Purchase</title>
     <link href="style.css" rel="stylesheet" type="text/css">
-    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-    <script src="https://code.jquery.com/ui/1.11.3/jquery-ui.js"></script>
-    <script src="jqRotate.js"></script>
     <link rel="stylesheet" href="style.css">
 
-    <script src="func.js">
+    <script src="script.js"></script>
     </script>
 </head>
 
@@ -21,7 +18,8 @@
             <ul class="nav-links">
                 <li><a href="menu.html">Menu</a></li>
                 <li><a href="track_order.html">Track Orders</a></li>
-                <li><a href="purchase.html"> <img class="basket" src="source/basket.png" alt="basket icon"></a></li>
+                <li><a href="cart.html"> <img class="basket" src="source/basket.png" alt="basket icon"></a></li>
+                <span id="result"> </span>
             </ul>
         </nav>
     </header>
@@ -30,7 +28,7 @@
 
     <div class="purchase1-container">
         <div class="first-cont">
-            <a href="#" class="back-button"> ᐊ Back </a>
+            <a href="cart.html" class="back-button"> ᐊ Back </a>
             <img class="progress-bar" src="source/progress.png" alt="Progress Bar 1">
         </div>
         <hr class="line3">
@@ -74,7 +72,7 @@
         <br><br><br>
         <hr class="line3">
         <div class="last-cont">
-            <a href="#" class="button5">Continue</a>
+            <a href="purchase.html" class="button5">Continue</a>
         </div>
         <br>
         <br>
